	Fixed bug where isDirty state was incorrect if another form was submitted.
	Fixed bug with getHTML not returning correct content if run twice on a row in IE.
	Fixed bug where setting class to "not set" in the advimage dialog in IE didn't remove the class attribute.
	Fixed bug where mceToggleEditor command didn't work with other elements such as DIVs.
	Fixed so the width/height fields of the advanced themes image dialogs can take more that 3 characters.
	Fixed so store/restore selection logic works in Opera and Safari (Nightly).
	Fixed so the remove column/row icons are more clear in the table plugin. Contributed by Ferenc Veres.
	Fixed so both title and alt attributes of buttons are set. Contributed by BigBrownChunx.
	Fixed so if ctrl key is hold down the default browser context menu will appear.
	Fixed problem with source editor using mono instead of monospace as a font family.
	Fixed problem with Opera detection, it now detects Opera even if it spoofs another browser.
	Fixed problem where TinyMCE failed to initialized if used together with libraries like Scriptaculous.
Version 2.1.0 (2007-02-13)
	Added new template plugin, this supports simple snippets and advanced smart templates.
	Added new attributes dialog for xhtmlxtras plugin. Based on contribution by Ryan Demmer.
	Added new bbcode plugin, currently only support for PunBB but more might be added in the future.
	Added new support for table captions, captions can now be toggled on or off on tables.
	Added new more colors link for text/background color menus.
	Added new more advanced color picker based on a contribution by Tristan Poet.
	Added new functionality to always keep inlinepopups in viewable area contributed by Joshua T. Corbin.
	Added new maximize button for inlinepopups contributed by Joshua T. Corbin.
	Added new mceToggleEditor command. Toggles visibility of a editor instance on/off.
	Added new showInstance/hideInstance callbacks. Used by mceToggleEditor command.